# verity

./: .gitignore  README.md  config.py  data_handler.py  main.py  pull_request_template.md  pyproject.toml  testing_limbo.py  verity.db  verity.db-wal  verity.py  verity_schema.yaml
.github/workflows/: stage_unit_tests.yml
config/: logging_config.yaml
config_files/: verity_schema.yaml
docs/: TODO.md  data_dictionary.md
src/: config.py  data_handler.py  test_db  verity.py
src/config_files/: logging_config.yaml  verity_schema.yaml
src/front/: home.py
src/front/static/: verity_style.css
src/front/templates/: base.html  home.html
src/tests/: test_config.py  test_data_handler.py
