[project]
name = "verity"
version = "0.1.0"
description = "Verity is the code name for an unnamed project about budgeting and financial planning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.11.9",
]
[tool.unittest.ini_options]
pythonpath = ["."]
testspaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
